update .env.example and main.py

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# discordBotToken
-TOKEN = "ASDFGHJKL"
+WEBHOOK_URL=
 # Directory
-CWD = "/home/user/program"
-# 
-FILE_PATH = ""
+DOCKER_COMPOSE_PATH=~/Desktop/docker-com
+DOCKER_COMPOSE_FILE=docker-compose.yml
